@@ -6,13 +6,16 @@ package framework.action;
 import java.lang.reflect.Array;
 import java.math.BigDecimal;
 import java.text.ParseException;
+import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.HashMap;
 
 import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
 
-/** 
+import framework.util.StringUtil;
+
+/**
  * 요청객체, 쿠키객체의 값을 담는 해시테이블 객체이다.
  * 요청객체의 파라미터를 추상화 하여 Box 를 생성해 놓고 파라미터이름을 키로 해당 값을 원하는 데이타 타입으로 반환받는다.
  */
@@ -29,13 +32,13 @@ public class Box extends HashMap<String, String[]> {
 		this._name = name;
 	}
 
-	/** 
+	/**
 	 * 요청객체의 파라미터 이름과 값을 저장한 해시테이블을 생성한다.
 	 * <br>
-	 * ex) request Box 객체를 얻는 경우 => Box box = Box.getBox(request)
-	 * 
+	 * ex) request Box 객체를 얻는 경우: Box box = Box.getBox(request)
+	 *
 	 * @param request HTTP 클라이언트 요청객체
-	 * 
+	 *
 	 * @return 요청Box 객체
 	 */
 	public static Box getBox(HttpServletRequest request) {
@@ -47,13 +50,13 @@ public class Box extends HashMap<String, String[]> {
 		return box;
 	}
 
-	/** 
+	/**
 	 * 요청객체의 쿠키 이름과 값을 저장한 해시테이블을 생성한다.
 	 * <br>
-	 * ex) cookie Box 객체를 얻는 경우 => Box box = Box.getBoxFromCookie(request)
-	 * 
+	 * ex) cookie Box 객체를 얻는 경우: Box box = Box.getBoxFromCookie(request)
+	 *
 	 * @param request HTTP 클라이언트 요청객체
-	 * 
+	 *
 	 * @return 쿠키Box 객체
 	 */
 	public static Box getBoxFromCookie(HttpServletRequest request) {
@@ -68,259 +71,315 @@ public class Box extends HashMap<String, String[]> {
 		return cookiebox;
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 오브젝트를 리턴한다.
-	 * 
-	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 오브젝트
-	 */
-	public Object get(String key) {
-		Object value = null;
-		value = super.get(key);
-		if (value == null) {
-			return value;
-		}
-		if (value.getClass().isArray()) {
-			int length = Array.getLength(value);
-			if (length == 0) {
-				value = null;
-			} else {
-				value = Array.get(value, 0);
-			}
-		}
-		return value;
-	}
-
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 문자열 배열을 리턴한다.
-	 * 
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 문자열 배열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public String[] getArray(String key) {
+		return getArray(key, new String[] {});
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 문자열 배열을 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public String[] getArray(String key, String[] defaultValue) {
 		String[] value = super.get(key);
 		if (value == null) {
-			return new String[] {};
+			return defaultValue;
 		}
 		return value;
 	}
 
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 Boolean 객체를 리턴한다.
-	 * 
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 Boolean 객체
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Boolean getBoolean(String key) {
-		String value = getString(key);
-		Boolean isTrue = Boolean.valueOf(false);
-		try {
-			isTrue = Boolean.valueOf(value);
-		} catch (Exception e) {
-		}
-		return isTrue;
+		return getBoolean(key, Boolean.FALSE);
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 Double 객체를 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Boolean 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 Double 객체
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Boolean getBoolean(String key, Boolean defaultValue) {
+		String value = getRawString(key).trim();
+		if (value.isEmpty()) {
+			return defaultValue;
+		}
+		return Boolean.valueOf(value);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Double 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Double getDouble(String key) {
-		String value = getString(key).trim().replaceAll(",", "");
-		if (value.equals("")) {
-			return Double.valueOf(0);
-		}
-		Double num = null;
-		try {
-			num = Double.valueOf(value);
-		} catch (Exception e) {
-			num = Double.valueOf(0);
-		}
-		return num;
+		return getDouble(key, Double.valueOf(0));
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 BigDecimal 객체를 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Double 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 BigDecimal 객체
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Double getDouble(String key, Double defaultValue) {
+		try {
+			String value = getRawString(key).trim().replaceAll(",", "");
+			if (value.isEmpty()) {
+				return defaultValue;
+			}
+			return Double.valueOf(value);
+		} catch (NumberFormatException e) {
+			return defaultValue;
+		}
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 BigDecimal 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public BigDecimal getBigDecimal(String key) {
-		String value = getString(key).trim().replaceAll(",", "");
-		if (value.equals("")) {
-			return BigDecimal.valueOf(0);
-		}
+		return getBigDecimal(key, BigDecimal.ZERO);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 BigDecimal 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public BigDecimal getBigDecimal(String key, BigDecimal defaultValue) {
 		try {
+			String value = getRawString(key).trim().replaceAll(",", "");
+			if (value.isEmpty()) {
+				return defaultValue;
+			}
 			return new BigDecimal(value);
-		} catch (Exception e) {
-			return BigDecimal.valueOf(0);
+		} catch (NumberFormatException e) {
+			return defaultValue;
 		}
 	}
 
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 Float 객체를 리턴한다.
-	 * 
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 Float 객체
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Float getFloat(String key) {
-		return new Float(getDouble(key).doubleValue());
+		return getFloat(key, Float.valueOf(0));
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 Integer 객체를 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Float 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 Integer 객체
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Float getFloat(String key, Float defaultValue) {
+		try {
+			String value = getRawString(key).trim().replaceAll(",", "");
+			if (value.isEmpty()) {
+				return defaultValue;
+			}
+			return Float.valueOf(value);
+		} catch (NumberFormatException e) {
+			return defaultValue;
+		}
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Integer 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Integer getInteger(String key) {
-		Double value = getDouble(key);
-		return Integer.valueOf(value.intValue());
+		return getInteger(key, Integer.valueOf(0));
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 Long 객체를 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Integer 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 Long 객체
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Integer getInteger(String key, Integer defaultValue) {
+		try {
+			String value = getRawString(key).trim().replaceAll(",", "");
+			if (value.isEmpty()) {
+				return defaultValue;
+			}
+			return Integer.valueOf(value);
+		} catch (NumberFormatException e) {
+			return defaultValue;
+		}
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Long 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Long getLong(String key) {
-		Double value = getDouble(key);
-		return Long.valueOf(value.longValue());
+		return getLong(key, Long.valueOf(0));
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 long 변수를 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Long 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 long 변수를
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
 	 */
-	public long getlong(String key) {
-		Double value = getDouble(key);
-		return value.longValue();
+	public Long getLong(String key, Long defaultValue) {
+		try {
+			String value = getRawString(key).trim().replaceAll(",", "");
+			if (value.isEmpty()) {
+				return defaultValue;
+			}
+			return Long.valueOf(value);
+		} catch (NumberFormatException e) {
+			return defaultValue;
+		}
 	}
 
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 String 객체를 리턴한다.
 	 * 크로스사이트 스크립팅 공격 방지를 위해 &lt;, &gt; 치환을 수행한다.
-	 * 
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 String 객체
+	 * @return key에 매핑되어 있는 값
+	 */
+	@Deprecated
+	public String get(String key) {
+		return getString(key);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 String 객체를 리턴한다.
+	 * 크로스사이트 스크립팅 공격 방지를 위해 &lt;, &gt; 치환을 수행한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public String getString(String key) {
-		String str = (String) get(key);
-		if (str == null) {
-			return "";
-		}
-		StringBuilder result = new StringBuilder(str.length());
-		for (int i = 0; i < str.length(); i++) {
-			switch (str.charAt(i)) {
-			case '<':
-				result.append("&lt;");
-				break;
-			case '>':
-				result.append("&gt;");
-				break;
-			case '\'':
-				result.append("&#39;");
-				break;
-			case '"':
-				result.append("&quot;");
-				break;
-			case '&':
-				result.append("&amp;");
-				break;
-			default:
-				result.append(str.charAt(i));
-				break;
-			}
-		}
-		return result.toString();
+		return getString(key, "");
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 String 객체를 변환없이 리턴한다.
-	 * 
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 String 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 String 객체
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	@Deprecated
+	public String get(String key, String defaultValue) {
+		return getString(key, defaultValue);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 String 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public String getString(String key, String defaultValue) {
+		return StringUtil.escapeHtmlSpecialChars(getRawString(key, defaultValue));
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 String 객체를 변환없이 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @return key에 매핑되어 있는 값
 	 */
 	public String getRawString(String key) {
-		String str = (String) get(key);
-		if (str == null) {
-			return "";
-		}
-		return str;
+		return getRawString(key, "");
 	}
 
-	/** 
-	 * 키(key)문자열과 매핑되어 있는 바이트 배열을 리턴한다.
-	 * 
+	/**
+	 * 키(key)문자열과 매핑되어 있는 String 객체를 변환없이 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
-	 * 
-	 * @return key에 매핑되어 있는 바이트 배열
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
 	 */
-	public byte[] getByte(String key) {
-		Object obj = super.get(key);
-		if (obj == null) {
-			return null;
+	public String getRawString(String key, String defaultValue) {
+		String[] value = super.get(key);
+		if (value == null || value.length == 0 || StringUtil.isEmpty(value[0])) {
+			return defaultValue;
 		}
-		return (byte[]) obj;
+		return value[0];
 	}
 
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 Date 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열(기본형식: yyyy-MM-dd)
-	 * @return key에 매핑되어 있는 Date 객체
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Date getDate(String key) {
-		String str = getString(key);
-		if ("".equals(str)) {
-			return null;
+		return getDate(key, (Date) null);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Date 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열(기본형식: yyyy-MM-dd)
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Date getDate(String key, Date defaultValue) {
+		String value = getRawString(key).trim().replaceAll("[^\\d]", "");
+		if (value.isEmpty()) {
+			return defaultValue;
 		}
-		java.text.SimpleDateFormat formater = new java.text.SimpleDateFormat("yyyy-MM-dd", java.util.Locale.KOREA);
+		SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMdd");
+		sdf.setLenient(false);
 		try {
-			return formater.parse(str);
+			return sdf.parse(value);
 		} catch (ParseException e) {
-			return null;
+			return defaultValue;
 		}
 	}
 
-	/** 
+	/**
 	 * 키(key)문자열과 매핑되어 있는 Date 객체를 리턴한다.
 	 * @param key 값을 찾기 위한 키 문자열
 	 * @param format 날짜 포맷(예, yyyy-MM-dd HH:mm:ss)
-	 * @return key에 매핑되어 있는 Date 객체
+	 * @return key에 매핑되어 있는 값
 	 */
 	public Date getDate(String key, String format) {
-		String str = getString(key);
-		if ("".equals(str)) {
-			return null;
+		return getDate(key, format, (Date) null);
+	}
+
+	/**
+	 * 키(key)문자열과 매핑되어 있는 Date 객체를 리턴한다.
+	 * @param key 값을 찾기 위한 키 문자열
+	 * @param format 날짜 포맷(예, yyyy-MM-dd HH:mm:ss)
+	 * @param defaultValue 값이 없을 때 리턴할 기본 값
+	 * @return key에 매핑되어 있는 값 또는 기본 값
+	 */
+	public Date getDate(String key, String format, Date defaultValue) {
+		String value = getRawString(key).trim();
+		if (value.isEmpty()) {
+			return defaultValue;
 		}
-		java.text.SimpleDateFormat formatter = new java.text.SimpleDateFormat(format, java.util.Locale.KOREA);
+		SimpleDateFormat sdf = new SimpleDateFormat(format);
+		sdf.setLenient(false);
 		try {
-			return formatter.parse(str);
+			return sdf.parse(value);
 		} catch (ParseException e) {
-			return null;
+			return defaultValue;
 		}
 	}
 
 	/**
 	 * 키(key)에 매핑되는 스트링을 셋팅한다.
-	 * 
+	 *
 	 * @param key 값을 찾기 위한 키 문자열
 	 * @param value 키에 매핑되는 문자열
 	 * @return 원래 key에 매핑되어 있는 스트링 배열
@@ -329,9 +388,9 @@ public class Box extends HashMap<String, String[]> {
 		return put(key, new String[] { value });
 	}
 
-	/** 
+	/**
 	 * Box 객체가 가지고 있는 값들을 화면 출력을 위해 문자열로 변환한다.
-	 * 
+	 *
 	 * @return 화면에 출력하기 위해 변환된 문자열
 	 */
 	@Override
@@ -384,9 +443,9 @@ public class Box extends HashMap<String, String[]> {
 		return "Box[" + _name + "]=" + buf.toString();
 	}
 
-	/** 
+	/**
 	 * Box 객체가 가지고 있는 값들을 쿼리 스트링으로 변환한다.
-	 * 
+	 *
 	 * @return 쿼리 스트링으로 변환된 문자열
 	 */
 	public String toQueryString() {
@@ -420,9 +479,9 @@ public class Box extends HashMap<String, String[]> {
 		return buf.toString();
 	}
 
-	/** 
+	/**
 	 * Box 객체가 가지고 있는 값들을 Xml로 변환한다.
-	 * 
+	 *
 	 * @return Xml로 변환된 문자열
 	 */
 	public String toXml() {
@@ -465,9 +524,9 @@ public class Box extends HashMap<String, String[]> {
 		return buf.toString();
 	}
 
-	/** 
+	/**
 	 * Box 객체가 가지고 있는 값들을 Json 표기법으로 변환한다.
-	 * 
+	 *
 	 * @return Json 표기법으로 변환된 문자열
 	 */
 	public String toJson() {
@@ -522,7 +581,7 @@ public class Box extends HashMap<String, String[]> {
 	//////////////////////////////////////////////////////////////////////////////////////////Private 메소드
 	/**
 	 * 자바스크립트상에 특수하게 인식되는 문자들을 JSON등에 사용하기 위해 변환하여준다.
-	 * 
+	 *
 	 * @param str 변환할 문자열
 	 */
 	private String escapeJS(String str) {
